--- a/QTDesigner/popuperror.ui
+++ b/QTDesigner/popuperror.ui
@@ -14,6 +14,9 @@
    <string>Form</string>
   </property>
   <widget class="QLineEdit" name="error_text">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>120</x>
